--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -11,18 +11,18 @@
     <div class="col-md-12 bs-example">
       <h2>Items</h2>
       <ul class="list-group mb-4 list-group" >
-        <form method="post" action="{{ url_for('edit_item') }}">
+        <form method="post">
         {% for item in items %}
-        <li> 
-          <button type="submit" name="deletebutton" value="{{item.id}}">
+        <li> delete_item
+          <button type="submit" name="deletebutton" value="{{item.id}}" onclick="javascript: form.action='{{ url_for('delete_item')}}';">
             Delete
           </button> 
           {% if item.status == "Not Started" %}
-          <button type="submit" name="Complete" value="{{item.id}}">
+          <button type="submit" name="Complete" value="{{item.id}}" onclick="javascript: form.action='{{ url_for('complete_item')}}';">
             Complete
           </button> 
           {% else %}
-          <button type="submit" name="Reset" value="{{item.id}}">
+          <button type="submit" name="Reset" value="{{item.id}}" onclick="javascript: form.action='{{ url_for('reset_item')}}';">
             Reset
           </button> 
           {% endif %}
