--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -13,20 +13,20 @@
       <ul class="list-group mb-4 list-group" >
         <form method="post">
         {% for item in items %}
-        <li> 
-          <button type="submit" name="deletebutton" value="{{item.cardid}}" onclick="javascript: form.action='{{ url_for('delete_item')}}';">
+        <li> delete_item
+          <button type="submit" name="deletebutton" value="{{item.id}}" onclick="javascript: form.action='{{ url_for('delete_item')}}';">
             Delete
           </button> 
-          {% if item.unstarted() == true %}
-          <button type="submit" name="Complete" value="{{item.cardid}}" onclick="javascript: form.action='{{ url_for('complete_item')}}';">
+          {% if item.status == "Not Started" %}
+          <button type="submit" name="Complete" value="{{item.id}}" onclick="javascript: form.action='{{ url_for('complete_item')}}';">
             Complete
           </button> 
           {% else %}
-          <button type="submit" name="Reset" value="{{item.cardid}}" onclick="javascript: form.action='{{ url_for('reset_item')}}';">
+          <button type="submit" name="Reset" value="{{item.id}}" onclick="javascript: form.action='{{ url_for('reset_item')}}';">
             Reset
           </button> 
           {% endif %}
-          {{item.id}} - {{item.description()}} - {{item.title}}  
+          {{item.id}} - {{item.status}} - {{item.title}}  
         </li>
         {% endfor %}
         <!-- List the todo items here -->
